--- a/styleprof.css
+++ b/styleprof.css
@@ -1,6 +1,7 @@
 body{
 	background-image: url("https://cdn.pixabay.com/photo/2017/09/04/09/34/head-2713346_960_720.jpg");
 	background-size: cover;
+	background-repeat: no-repeat;
 }
 h1{
 	color: #ffffb3;
@@ -16,13 +17,45 @@ p{
 	font-family: cursive;
 	color: #ffffff;
 }
-button{
-	font-family: serif;
-	padding: 15px 20px;
-	border-radius: 10px;
-	background-color: #ff6600;
-	cursor: pointer;
+button {
+  border-radius: 4px;
+  background-color: #ffd1b3;
+  border: groove;
+  color: #801a00;
+  text-align: center;
+  font-size: 28px;
+  padding: 10px;
+  width: 110px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
 }
 button:hover{
 	background-color: #ffffb3;
 	transform: scale(1.2);
+	color: #336600;
+}
+button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+button:hover span {
+  padding-right: 25px;
+}
+
+button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
