--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,27 +1,60 @@
 body{
-	background-image: url("https://i.redd.it/p3bxsf1ybuq11.png");
-	background-size: cover;
+	background-image: url("https://images.pexels.com/photos/1025469/pexels-photo-1025469.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+	background-size: 1360px 768px;
+	background-repeat: no-repeat;
 }
 img{
-	height: 200px;
+	height: 250px;
 	width: 250px;
-	border-radius: 60%;
+	border-radius: 20%;
 	box-shadow: 5px 10px 10px;
-	color: #ffffb3;	
+	color: #ffffb3;
+	transition: all 0.5s;	
 }
 img:hover{
 	transform: scale(1.2);
-	transition-delay: 2s;
-	transition: all;
 }
-button{
-	font-family: serif;
-	padding: 20px 30px;
-	border-radius: 10px;
-	background-color: #ff6600;
-	cursor: pointer;
+button {
+  border-radius: 4px;
+  background-color: #ffd1b3;
+  border: groove;
+  color: #801a00;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
 }
 button:hover{
 	background-color: #ffffb3;
 	transform: scale(1.2);
+	color: green;
+}
+button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+button:hover span {
+  padding-right: 15px;
+}
+button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+footer {
+	background-color: #000000;
+	color: white;
+	font-size: 20px
 }
